k83/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service-api-service
spec:
  type: LoadBalancer
  # type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: product-service-api
